<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/preferencesAddons">
		<CheckBoxPreference android:title="@string/preferencesRoadToLegend"
			android:summary="@string/preferencesRoadToLegendSummary"
			android:defaultValue="false"
			android:key="roadToLegend" />
		<CheckBoxPreference android:title="@string/preferencesTombOfIce"
			android:summary="@string/preferencesTombOfIceSummary"
			android:defaultValue="false"
			android:key="tombOfIce" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/preferencesSettings">
		<CheckBoxPreference android:title="@string/preferencesSounds"
			android:summary="@string/preferencesSoundsSummary"
			android:defaultValue="true"
			android:key="sounds" />
		<CheckBoxPreference android:title="@string/preferencesVibration"
			android:summary="@string/preferencesVibrationSummary"
			android:defaultValue="true"
			android:key="vibration" />
		<Preference android:title="@string/preferencesReset"
			android:summary="@string/preferencesResetSummary"
			android:key="reset" />
	</PreferenceCategory>
</PreferenceScreen>
