<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/resultWounds"
        style="@style/resultsStatsText"
        android:drawableRight="@drawable/whitewound" />

    <TextView
        android:id="@+id/statsMinus"
        style="@style/resultsStatsText"
        android:text=" - " />

    <TextView
        android:id="@+id/resultShields"
        style="@style/resultsStatsText" />

    <ImageView
        android:id="@+id/shieldsLabel"
        style="@style/resultsImageLabel"
        android:layout_width="16dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/shields"
        android:src="@drawable/whiteshield" />

    <TextView
        android:id="@+id/statsEquals"
        style="@style/resultsStatsText"
        android:text=" = " />

    <TextView
        android:id="@+id/statsEffectiveWounds"
        style="@style/resultsStatsText"
        android:text = "0" />

    <LinearLayout
        android:id="@+id/statsSurgesGroup"
        style="@style/resultsStatsGroup" >

        <View style="@style/resultsStatsSeparator" />

        <TextView
            android:id="@+id/resultSurges"
            style="@style/resultsStatsText"
            android:drawableRight="@drawable/whitesurge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/statsRangeGroup"
        style="@style/resultsStatsGroup" >

        <View style="@style/resultsStatsSeparator" />

        <TextView
            android:id="@+id/resultRange"
            style="@style/resultsStatsText" />

        <TextView
            style="@style/resultsStatsText"
            android:layout_marginLeft="3dp"
            android:text="@string/range" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/statsEnhancementGroup"
        style="@style/resultsStatsGroup" >

        <View style="@style/resultsStatsSeparator" />

        <TextView
            android:id="@+id/resultEnhancement"
            style="@style/resultsStatsText" />

        <TextView
            style="@style/resultsStatsText"
            android:layout_marginLeft="3dp"
            android:text="@string/enhancement" />
    </LinearLayout>

</LinearLayout>